--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="build/jars/NetworkTables.jar"/>
 	<classpathentry exported="true" kind="lib" path="build/jars/WPILib.jar"/>
+	<classpathentry exported="true" kind="lib" path="build/jars/app.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
